Add 90% of functionalities Including: Expenses breakdown (registration fees, etc.) Styling (bigger width) Input bug fixes

--- a/beta_version/style.css
+++ b/beta_version/style.css
@@ -66,7 +66,7 @@ input[type="number"]:active {
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5); 
   padding: 20px; 
   border-radius: 5px;
-  width: 80%;
+  width: 900px;
   background-color: white;
 
 }
