--- a/beta_version/style.css
+++ b/beta_version/style.css
@@ -1,13 +1,12 @@
-/* Copyright of Ndolena Design. This calculator is merely an estimation of what your bond would cost and the other costs associated with it.
-    Hence, Ndolena Design is not liable for any inaccuracies found in this code. We are trying to guide you in making a decision in the best way we can, 
+/* Copyright of GENIAL INGELE. This calculator is merely an estimation of what your bond would cost and the other costs associated with it.
+    Hence, GENIAL INGELE is not liable for any inaccuracies found in this code. We are trying to guide you in making a decision in the best way we can, 
     but the accurate information will be given to you by your bank. 
     
     NOTE: Data found on this code is based on South African laws and fees.
     
     DATE: 24 SEPTEMBER 2023
     
-    NDOLENA DESIGN 
-    REPRESENTED BY GENIAL INGELE
+    GENIAL INGELE 
     */
 
 
