--- a/beta_version/style.css
+++ b/beta_version/style.css
@@ -103,8 +103,14 @@ h1{
 
 }
 
-h2, h3, h4{
+h2{
   line-height: 18pt;
+  font-size: 18pt;
+}
+
+h3, h4{
+  line-height: 18pt;
+  font-size: 14pt;
 }
 
 select{
